fixes to prevent horizontal scrolling on mobile

--- a/css/marchathon.css
+++ b/css/marchathon.css
@@ -8,7 +8,6 @@
 }
 
 .fh5co-cover-text > div {
-	width: 297px;
 	height: 297px;
 	position: absolute;
 	left: 50%;
@@ -54,7 +53,7 @@
 
 #map {
 	height: 600px;
-	width: 300px;
+	width: 250px;
 	margin: 0 auto;
 }
 
